--- a/app/src/main/res/layout/activity_store_saving.xml
+++ b/app/src/main/res/layout/activity_store_saving.xml
@@ -34,6 +34,7 @@
   </LinearLayout>
 
   <ScrollView
+      android:overScrollMode="never"
     android:id="@+id/sv_store_saving"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
