--- a/app/src/main/res/layout/fragment_setting_cs_using.xml
+++ b/app/src/main/res/layout/fragment_setting_cs_using.xml
@@ -39,9 +39,13 @@
 
 
   <ScrollView
+      android:overScrollMode="never"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
       <com.puzi.puzi.ui.customview.NotoTextView
         android:text="@string/string_use"
