--- a/app/src/main/res/layout/fragment_setting_notice.xml
+++ b/app/src/main/res/layout/fragment_setting_notice.xml
@@ -16,6 +16,7 @@
     <com.puzi.puzi.ui.setting.AnimatedExpandableListView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
+        android:overScrollMode="never"
       android:id="@+id/lv_notice"
       android:background="@color/colorWhite"
       android:columnWidth="240dp"/>
