--- a/app/src/main/res/layout/activity_store_challenge_detail.xml
+++ b/app/src/main/res/layout/activity_store_challenge_detail.xml
@@ -10,6 +10,7 @@
     android:layout_height="match_parent">
 
     <ScrollView
+        android:overScrollMode="never"
       android:layout_marginBottom="55dp"
       android:layout_width="match_parent"
       android:layout_height="match_parent">
@@ -105,6 +106,7 @@
 
             <com.puzi.puzi.ui.customview.NotoTextView
               app:fontWeight="medium"
+                android:id="@+id/tv_store_challenge_count"
               android:background="@drawable/bg_store_challenge_count"
               android:text="100명 참여중"
               android:textSize="16sp"
@@ -163,6 +165,10 @@
             android:id="@+id/sw_store_challenge_item"
             android:track="@drawable/switch_track_selector"
             android:thumb="@drawable/switch_thumb_selector"
+              android:showText="false"
+              android:textOff=""
+              android:textOn=""
+              android:switchMinWidth="5dp"
             android:checked="false"
             android:layout_gravity="center_vertical"
             android:layout_marginRight="17dp"
