--- a/app/src/main/res/layout/activity_store_purchase.xml
+++ b/app/src/main/res/layout/activity_store_purchase.xml
@@ -10,6 +10,7 @@
     android:layout_height="match_parent">
 
     <ScrollView
+        android:overScrollMode="never"
       android:layout_marginBottom="55dp"
       android:layout_width="match_parent"
       android:layout_height="match_parent">
