--- a/app/src/main/res/layout/activity_store_withdraw.xml
+++ b/app/src/main/res/layout/activity_store_withdraw.xml
@@ -37,6 +37,7 @@
 
   </LinearLayout>
   <ScrollView
+      android:overScrollMode="never"
     android:id="@+id/sv_store_withdraw_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -240,6 +241,7 @@
       </LinearLayout>
 
       <ListView
+          android:overScrollMode="never"
         android:id="@+id/lv_store_withdraw_history"
         android:layout_marginTop="11dp"
         android:layout_width="match_parent"
