--- a/app/src/main/res/layout/fragment_advertisement.xml
+++ b/app/src/main/res/layout/fragment_advertisement.xml
@@ -22,6 +22,7 @@
       <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+          android:overScrollMode="never"
         android:id="@+id/lv_advertise"
         android:background="@color/colorWhite"
         android:divider="@color/colorWhite"/>
