--- a/app/src/main/res/layout/fragment_channel.xml
+++ b/app/src/main/res/layout/fragment_channel.xml
@@ -15,11 +15,13 @@
     android:layout_marginBottom="8dp"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
+      android:overScrollMode="never"
     android:visibility="gone"
     widget:dividerWidth="1dp"/>
 
   <ScrollView
     android:id="@+id/sv_channel"
+      android:overScrollMode="never"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -88,6 +90,7 @@
       <ListView
         android:id="@+id/lv_editorspage"
         android:divider="#00000000"
+          android:overScrollMode="never"
         android:layout_marginTop="11dp"
         android:layout_marginBottom="15dp"
         android:layout_width="match_parent"
