--- a/app/src/main/res/layout/fragment_channel_detail.xml
+++ b/app/src/main/res/layout/fragment_channel_detail.xml
@@ -10,6 +10,7 @@
     android:layout_marginBottom="79dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+      android:overScrollMode="never"
     android:scrollbars="none"
     android:fillViewport="true">
 
@@ -203,6 +204,7 @@
 
       <!-- 에디터스페이지 가로스크롤 -->
       <com.puzi.puzi.ui.HorizontalListView
+          android:overScrollMode="never"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:widget="http://schemas.android.com/apk/res-auto"
         android:id="@+id/hlv_channel_detail_editors_page"
@@ -240,6 +242,7 @@
 
       <!-- 댓글 리스트 -->
       <ListView
+          android:overScrollMode="never"
         android:id="@+id/lv_channel_detail_reply"
         android:choiceMode="none"
         android:clickable="false"
