--- a/app/src/main/res/layout/fragment_level.xml
+++ b/app/src/main/res/layout/fragment_level.xml
@@ -6,6 +6,8 @@
               android:layout_height="match_parent">
 
   <ScrollView
+      android:scrollbars="none"
+      android:overScrollMode="never"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
