--- a/app/src/main/res/layout/fragment_point_detail.xml
+++ b/app/src/main/res/layout/fragment_point_detail.xml
@@ -15,7 +15,7 @@
       android:gravity="center_vertical"
       android:orientation="vertical"
       android:layout_marginLeft="16dp"
-      android:layout_width="245dp"
+      android:layout_width="wrap_content"
       android:layout_height="match_parent">
 
       <com.puzi.puzi.ui.customview.NotoTextView
@@ -23,16 +23,16 @@
         android:id="@+id/tv_point_type"
         android:gravity="center_vertical"
         android:text="가입 축하 포인트 적립"
-        android:textSize="20sp"
+        android:textSize="18sp"
         android:layout_width="match_parent"
         android:layout_height="29dp"/>
 
       <com.puzi.puzi.ui.customview.NotoTextView
-        app:fontWeight="regular"
+        app:fontWeight="demilight"
         android:id="@+id/tv_point_at"
         android:gravity="center_vertical"
         android:text="2017-10-03 20:00"
-        android:textSize="16sp"
+        android:textSize="14sp"
         android:layout_width="match_parent"
         android:layout_height="19dp"/>
 
