--- a/app/src/main/res/layout/fragment_point_list.xml
+++ b/app/src/main/res/layout/fragment_point_list.xml
@@ -6,6 +6,7 @@
 
   <ListView
     android:id="@+id/lv_point"
+      android:overScrollMode="never"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginStart="9.5dp"
