--- a/app/src/main/res/layout/fragment_question.xml
+++ b/app/src/main/res/layout/fragment_question.xml
@@ -62,6 +62,7 @@
         android:layout_marginBottom="15dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
+        android:overScrollMode="never"
         android:scrollbars="none"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -76,6 +77,7 @@
             android:divider="#00000000"
             android:clickable="false"
             android:focusable="false"
+            android:overScrollMode="never"
             android:focusableInTouchMode="false"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -116,7 +118,9 @@
               android:background="?android:attr/selectableItemBackground"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:id="@+id/btn_vote_more"/>
+              android:id="@+id/btn_vote_more"
+              android:layout_marginTop="5dp"
+              android:layout_marginBottom="5dp"/>
 
         </FrameLayout>
 
