--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -8,6 +8,7 @@
                 android:background="#efefef">
 
   <ScrollView
+      android:overScrollMode="never"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -372,6 +373,7 @@
       <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="1dp"
+          android:layout_marginBottom="30dp"
         android:background="#dadada"/>
 
     </LinearLayout>
