--- a/app/src/main/res/layout/fragment_store.xml
+++ b/app/src/main/res/layout/fragment_store.xml
@@ -11,6 +11,7 @@
     android:layout_height="match_parent">
 
     <ListView
+        android:overScrollMode="never"
       android:id="@+id/lv_store_brand"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
