--- a/app/src/main/res/layout/activity_store_saving_detail_mine.xml
+++ b/app/src/main/res/layout/activity_store_saving_detail_mine.xml
@@ -317,15 +317,16 @@
       android:background="@drawable/button_drop_down"
       android:id="@+id/ll_profile_channel_dropdown_container"
       android:layout_gravity="right|top"
-      android:layout_width="200dp"
+      android:layout_width="160dp"
       android:layout_height="wrap_content">
 
       <com.puzi.puzi.ui.customview.NotoButton
         app:fontWeight="regular"
         android:id="@+id/btn_profile_channel_dropdown_block"
+          android:background="@drawable/bg_store_saving"
+          android:textSize="16sp"
         android:text="해지하기"
         android:textColor="#333333"
-        android:background="@drawable/ripple_basic"
         android:layout_width="match_parent"
         android:layout_height="40dp"/>
 
