--- a/app/src/main/res/layout/activity_answer.xml
+++ b/app/src/main/res/layout/activity_answer.xml
@@ -163,23 +163,86 @@
             android:layout_width="match_parent"
             android:layout_height="163dp">
 
-          <Button
-              android:background="@drawable/button_question_off"
-              android:textColor="@color/colorBlack"
-              android:id="@+id/btn_answer_a2_a1"
+          <FrameLayout
               android:layout_weight="0.5"
               android:layout_marginRight="9dp"
               android:layout_width="0dp"
-              android:layout_height="match_parent"/>
+              android:layout_height="match_parent">
 
-          <Button
-              android:background="@drawable/button_question_off"
-              android:textColor="@color/colorBlack"
-              android:id="@+id/btn_answer_a2_a2"
+            <Button
+                android:background="@drawable/button_question_off"
+                android:id="@+id/btn_answer_a2_a1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+              <kr.puzi.puzi.ui.customview.NotoTextView
+                  app:fontWeight="medium"
+                  android:id="@+id/tv_answer_a2_t1"
+                  android:gravity="center"
+                  android:textSize="24sp"
+                  android:textColor="@color/colorBlack"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content" />
+
+              <kr.puzi.puzi.ui.customview.NotoTextView
+                  app:fontWeight="medium"
+                  android:id="@+id/tv_answer_a2_p1"
+                  android:gravity="center"
+                  android:textSize="20sp"
+                  android:textColor="@color/colorPuzi"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content" />
+
+            </LinearLayout>
+
+          </FrameLayout>
+
+          <FrameLayout
               android:layout_weight="0.5"
               android:layout_marginLeft="9dp"
               android:layout_width="0dp"
-              android:layout_height="match_parent"/>
+              android:layout_height="match_parent">
+
+            <Button
+                android:background="@drawable/button_question_off"
+                android:textColor="@color/colorBlack"
+                android:id="@+id/btn_answer_a2_a2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+              <kr.puzi.puzi.ui.customview.NotoTextView
+                  app:fontWeight="medium"
+                  android:id="@+id/tv_answer_a2_t2"
+                  android:gravity="center"
+                  android:textSize="24sp"
+                  android:textColor="@color/colorBlack"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content" />
+
+              <kr.puzi.puzi.ui.customview.NotoTextView
+                  app:fontWeight="medium"
+                  android:id="@+id/tv_answer_a2_p2"
+                  android:gravity="center"
+                  android:textSize="20sp"
+                  android:textColor="@color/colorPuzi"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content" />
+
+            </LinearLayout>
+
+          </FrameLayout>
 
         </LinearLayout>
 
@@ -189,7 +252,7 @@
           android:id="@+id/ll_answer_a4"
         android:orientation="vertical"
           android:gravity="center"
-          android:visibility="gone"
+          android:visibility="visible"
           android:layout_weight="0.7"
         android:layout_marginBottom="20dp"
         android:layout_width="match_parent"
@@ -202,23 +265,87 @@
           android:layout_width="match_parent"
           android:layout_height="0dp">
 
-          <Button
-            android:background="@drawable/button_question_off"
-              android:textColor="@color/colorBlack"
-              android:id="@+id/btn_answer_1"
+          <FrameLayout
             android:layout_weight="0.5"
             android:layout_marginRight="9dp"
             android:layout_width="0dp"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent">
 
           <Button
-            android:background="@drawable/button_question_off"
+              android:background="@drawable/button_question_off"
               android:textColor="@color/colorBlack"
-              android:id="@+id/btn_answer_2"
-            android:layout_weight="0.5"
-            android:layout_marginLeft="9dp"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"/>
+              android:id="@+id/btn_answer_1"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"/>
+
+          <LinearLayout
+              android:orientation="vertical"
+              android:gravity="center"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent">
+
+            <kr.puzi.puzi.ui.customview.NotoTextView
+                app:fontWeight="medium"
+                android:id="@+id/tv_answer_1_t"
+                android:gravity="center"
+                android:textSize="24sp"
+                android:textColor="@color/colorBlack"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <kr.puzi.puzi.ui.customview.NotoTextView
+                app:fontWeight="medium"
+                android:id="@+id/tv_answer_1_p"
+                android:gravity="center"
+                android:textSize="20sp"
+                android:textColor="@color/colorPuzi"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+          </LinearLayout>
+
+        </FrameLayout>
+
+          <FrameLayout
+              android:layout_weight="0.5"
+              android:layout_marginLeft="9dp"
+              android:layout_width="0dp"
+              android:layout_height="match_parent">
+
+            <Button
+                android:background="@drawable/button_question_off"
+                android:textColor="@color/colorBlack"
+                android:id="@+id/btn_answer_2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+              <kr.puzi.puzi.ui.customview.NotoTextView
+                  app:fontWeight="medium"
+                  android:id="@+id/tv_answer_2_t"
+                  android:gravity="center"
+                  android:textSize="24sp"
+                  android:textColor="@color/colorBlack"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content" />
+
+              <kr.puzi.puzi.ui.customview.NotoTextView
+                  app:fontWeight="medium"
+                  android:id="@+id/tv_answer_2_p"
+                  android:gravity="center"
+                  android:textSize="20sp"
+                  android:textColor="@color/colorPuzi"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content" />
+
+            </LinearLayout>
+
+          </FrameLayout>
 
         </LinearLayout>
 
@@ -229,23 +356,87 @@
           android:layout_width="match_parent"
           android:layout_height="0dp">
 
-          <Button
-            android:background="@drawable/button_question_off"
-              android:textColor="@color/colorBlack"
-              android:id="@+id/btn_answer_3"
-            android:layout_weight="0.5"
-            android:layout_marginRight="9dp"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"/>
+          <FrameLayout
+              android:layout_weight="0.5"
+              android:layout_marginRight="9dp"
+              android:layout_width="0dp"
+              android:layout_height="match_parent">
 
-          <Button
-            android:background="@drawable/button_question_off"
-              android:textColor="@color/colorBlack"
-              android:id="@+id/btn_answer_4"
-            android:layout_weight="0.5"
-            android:layout_marginLeft="9dp"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"/>
+            <Button
+                android:background="@drawable/button_question_off"
+                android:textColor="@color/colorBlack"
+                android:id="@+id/btn_answer_3"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+              <kr.puzi.puzi.ui.customview.NotoTextView
+                  app:fontWeight="medium"
+                  android:id="@+id/tv_answer_3_t"
+                  android:gravity="center"
+                  android:textSize="24sp"
+                  android:textColor="@color/colorBlack"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content" />
+
+              <kr.puzi.puzi.ui.customview.NotoTextView
+                  app:fontWeight="medium"
+                  android:id="@+id/tv_answer_3_p"
+                  android:gravity="center"
+                  android:textSize="20sp"
+                  android:textColor="@color/colorPuzi"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content" />
+
+            </LinearLayout>
+
+          </FrameLayout>
+
+          <FrameLayout
+              android:layout_weight="0.5"
+              android:layout_marginLeft="9dp"
+              android:layout_width="0dp"
+              android:layout_height="match_parent">
+
+            <Button
+                android:background="@drawable/button_question_off"
+                android:textColor="@color/colorBlack"
+                android:id="@+id/btn_answer_4"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+              <kr.puzi.puzi.ui.customview.NotoTextView
+                  app:fontWeight="medium"
+                  android:id="@+id/tv_answer_4_t"
+                  android:gravity="center"
+                  android:textSize="24sp"
+                  android:textColor="@color/colorBlack"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content" />
+
+              <kr.puzi.puzi.ui.customview.NotoTextView
+                  app:fontWeight="medium"
+                  android:id="@+id/tv_answer_4_p"
+                  android:gravity="center"
+                  android:textSize="20sp"
+                  android:textColor="@color/colorPuzi"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content" />
+
+            </LinearLayout>
+
+          </FrameLayout>
 
         </LinearLayout>
       </LinearLayout>
