--- a/app/src/main/res/layout/activity_answer.xml
+++ b/app/src/main/res/layout/activity_answer.xml
@@ -151,7 +151,7 @@
       <LinearLayout
           android:id="@+id/ll_answer_a2"
           android:orientation="vertical"
-          android:visibility="gone"
+          android:visibility="visible"
           android:gravity="bottom"
           android:layout_marginBottom="20dp"
           android:layout_width="match_parent"
@@ -210,7 +210,7 @@
               android:gravity="center"
               android:text="테스트"
               android:textSize="24sp"
-              android:textColor="@color/colorPuzi"
+              android:textColor="@color/colorBlack"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" />
 
@@ -233,7 +233,7 @@
           android:id="@+id/ll_answer_a4"
         android:orientation="vertical"
           android:gravity="center"
-          android:visibility="visible"
+          android:visibility="gone"
           android:layout_weight="0.7"
         android:layout_marginBottom="20dp"
         android:layout_width="match_parent"
