--- a/app/src/main/res/layout/activity_store_coupon.xml
+++ b/app/src/main/res/layout/activity_store_coupon.xml
@@ -45,11 +45,13 @@
     android:isScrollContainer="true">
 
     <LinearLayout
+        android:id="@+id/ll_coupon_container"
       android:orientation="vertical"
       android:layout_width="match_parent"
       android:layout_height="match_parent">
 
       <LinearLayout
+          android:id="@+id/ll_coupon_container_not_used"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:layout_marginTop="19dp"
@@ -77,7 +79,7 @@
 
       </LinearLayout>
 
-    <LinearLayout
+      <LinearLayout
         android:id="@+id/ll_not_use_coupon"
         android:orientation="vertical"
         android:layout_marginTop="8dp"
@@ -97,6 +99,7 @@
       </LinearLayout>
 
       <LinearLayout
+          android:id="@+id/ll_coupon_container_used"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:layout_marginTop="19dp"
