--- a/app/src/main/res/layout/item_list_empty_coupon.xml
+++ b/app/src/main/res/layout/item_list_empty_coupon.xml
@@ -2,18 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_gravity="center"
+              android:gravity="center"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
   <View
-      android:layout_weight="1"
+      android:layout_weight="0.3"
       android:layout_width="match_parent"
       android:layout_height="0dp">
 
   </View>
 
   <LinearLayout
-      android:layout_weight="1"
+      android:layout_marginTop="10dp"
+      android:layout_weight="0.7"
       android:orientation="vertical"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
@@ -40,7 +42,7 @@
   </LinearLayout>
 
   <View
-      android:layout_weight="1"
+      android:layout_weight="0.3"
       android:layout_width="match_parent"
       android:layout_height="0dp">
 
