--- a/app/src/main/res/layout/item_list_empty_used_coupon.xml
+++ b/app/src/main/res/layout/item_list_empty_used_coupon.xml
@@ -1,21 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+android:orientation="vertical"
+android:layout_gravity="center"
+android:gravity="center"
+android:layout_width="match_parent"
+android:layout_height="match_parent">
+
+<View
+    android:layout_weight="0.3"
+    android:layout_width="match_parent"
+    android:layout_height="0dp">
+
+</View>
+
+<LinearLayout
+    android:layout_marginTop="10dp"
+    android:layout_weight="0.7"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
   <ImageView
       android:id="@+id/iv_empty_coupon"
-      android:layout_marginTop="66dp"
       android:src="@drawable/no_ticket"
       android:layout_gravity="center"
       android:layout_width="130dp"
       android:layout_height="130dp" />
 
   <TextView
-      android:layout_marginTop="20dp"
-      android:layout_marginBottom="20dp"
-      android:text="사용한 쿠폰이 없습니다."
+      android:layout_marginTop="23dp"
+      android:text="사용한 쿠폰이\n없습니다."
       android:textSize="22sp"
       android:textColor="#333333"
       android:lineSpacingExtra="9sp"
@@ -24,5 +38,14 @@
       android:layout_width="172dp"
       android:layout_height="wrap_content"
       android:id="@+id/tv_item_list_message"/>
+
+</LinearLayout>
+
+<View
+    android:layout_weight="0.3"
+    android:layout_width="match_parent"
+    android:layout_height="0dp">
+
+</View>
 
 </LinearLayout>
